# personal.baby

./: .gitignore  baby_gui.py  gpt_describer.py  main.py  monitor_baby2.py  pyproject.toml  requirements.txt
components/gui/: BoxLayouts.py
components/logger/: csv_logger.py
components/vision/: yolo_vision.py
controller/: BabyMonitorController.py
experiment/: baby_gui.py  baby_gui_pi.py  baby_monitor.py  pi_camera_test.py
gui/: baby_gui.py
logs/: monitor_log.csv
src/babysitter/components/brain/: vision_analyzer.py  yolo_vision.py
src/babysitter/components/camera/: pi_cam.py
src/babysitter/components/gui/: BoxLayouts.py  Buttons.py  Texts.py  VideoViews.py
src/babysitter/configs/: prompts.py
src/babysitter/controller/: BabyMonitorController.py
src/babysitter/dataclasses/: vision_packages.py
src/babysitter/gui/: baby_gui.py
src/babysitter/logs/: monitor_log.csv
src/babysitter/skills/: contracts.py  vision_skills.py
